# 80CC

./: .gitignore  INSTALLATION.md  README.md
.claude/: settings.local.json
assets/audio/: .gitkeep
assets/config/: 80CC.json  app.json  game-engine.json  sprites.json  startup_benchmark.csv
assets/materials/: default.material
assets/scenes/: default_scene.json  scene_unit_test.json  static_scene.json
assets/shaders/: grid.frag  grid.vert  picker.frag  picker.vert  picker_instanced.frag  picker_instanced.vert  softbody.frag  softbody.vert  sprite.frag  sprite.vert  sprite_instanced.frag  sprite_instanced.vert
assets/src/: CMakeLists.txt
assets/src/include/Modules/: HelloWorldModule.hpp
assets/src/src/Modules/: HelloWorldModule.cpp
assets/templates/: default_sprite.json  default_sprite_template.json  loona-sprite.json  not-found-sprite.json
src/: CMakeLists.txt  install-externall.sh  vcpkg.json
src/Core/: 80CC_COREConfig.cmake  CMakeLists.txt
src/Core/include/: 80CC.hpp  Dependency.hpp  Engine.hpp  GlobalKeys.hpp  Paths.hpp
src/Core/include/App/: App.hpp  EnginePipeline.hpp  ExecutionPipeline.hpp  HeadlessApp.hpp  SDL2App.hpp
src/Core/include/Audio/: AudioManager.hpp
src/Core/include/Benchmark/: Benchmark.hpp
src/Core/include/Data/: BinaryContainer.hpp  Serializable.hpp
src/Core/include/Dependencies/: FilePersist.hpp  Globals.hpp  PathManager.hpp  Resources.hpp
src/Core/include/ECS/: ComponentPool.hpp  Entity.hpp  ISystem.hpp  Registry.hpp
src/Core/include/Game/: GameModule.hpp  ModuleLibrary.hpp  ModuleLoader.hpp
src/Core/include/Graphics/: Rendering.hpp
src/Core/include/Graphics/Rendering/: FrameBuffer.hpp  Frustum.hpp  PickerBuffer.hpp  Renderable.hpp  Rendering.hpp  RenderingContext.hpp  SpriteBatch.hpp
src/Core/include/Graphics/Rendering/Entities/: Camera.hpp  Grid.hpp  Mesh.hpp  SoftBodyRenderable.hpp  Sprite.hpp  SpriteShape.hpp
src/Core/include/Graphics/Shading/: Shader.hpp  ShaderPipeline.hpp
src/Core/include/Input/: PlayerInput.hpp
src/Core/include/Input/Controls/: Control.hpp  EditorCamera.hpp  GhostCamera.hpp  OrbitCamera.hpp
src/Core/include/Modules/: IGameModule.hpp
src/Core/include/Networking/: NetworkComponent.hpp  NetworkManager.hpp
src/Core/include/Physics/: PhysicsWorld.hpp
src/Core/include/Scene/: Api.hpp  NodeComponent.hpp  NodeComponentInfo.hpp  PropertySystem.hpp  Scene.hpp  SceneManager.hpp  SceneNode.cpp  SceneNode.hpp  SceneNode.inl  SceneObject.hpp  Transform.hpp
src/Core/include/Scene/Assets/: AssetBuilder.hpp  AssetLoader.hpp  MaterialDef.hpp  ResourceCache.hpp
src/Core/include/Scene/Components/: AudioListenerComponent.hpp  AudioSourceComponent.hpp  GravityAttractorComponent.hpp  RenderableNode.hpp  RigidBodyComponent.hpp  SoftBodyComponent.hpp
src/Core/include/Scene/Systems/: AudioSystem.hpp  NetworkSystem.hpp  PhysicsSystem.hpp  RenderSystem.hpp
src/Core/include/Threading/: AsyncQueue.hpp  ThreadPool.hpp  ThreadRegistry.hpp  WorkerThread.hpp
src/Core/include/UI/: BuildPanel.hpp  ComponentRegistry.hpp  ConfigurationsWindow.hpp  Console.hpp  DevEditor.hpp  EditorPropertyVisitor.hpp  ImGuiConsoleSink.hpp  SpriteEditor.hpp  UIManager.hpp
src/Core/include/UI/Widgets/: PathFieldWidget.hpp
src/Core/src/: 80CC.cpp  Engine.cpp
src/Core/src/App/: HeadlessApp.cpp  SDL2App.cpp
src/Core/src/Audio/: AudioManager.cpp
src/Core/src/Game/: ModuleLoader.cpp
src/Core/src/Graphics/: Rendering.cpp
src/Core/src/Graphics/Rendering/: FrameBuffer.cpp  PickerBuffer.cpp  Renderable.cpp  Rendering.cpp  SpriteBatch.cpp
src/Core/src/Graphics/Rendering/Entities/: Camera.cpp  Grid.cpp  SoftBodyRenderable.cpp  Sprite.cpp
src/Core/src/Graphics/Rendering/Shading/: ShaderPipeline.cpp
src/Core/src/Graphics/Shading/: Shader.cpp  ShaderPipeline.cpp
src/Core/src/Input/: PlayerInput.cpp
src/Core/src/Input/Controls/: EditorCamera.cpp  GhostCamera.cpp  OrbitCamera.cpp
src/Core/src/Networking/: NetworkComponent.cpp  NetworkManager.cpp
src/Core/src/Physics/: PhysicsWorld.cpp
src/Core/src/Rendering/: Rendering.cpp
src/Core/src/Rendering/Entities/: Camera.cpp
src/Core/src/Rendering/Shading/: Shader.cpp
src/Core/src/Scene/: Scene.cpp  SceneManager.cpp  SceneNode.cpp  Transform.cpp
src/Core/src/Scene/Assets/: AssetBuilder.cpp  AssetLoader.cpp  ResourceCache.cpp
src/Core/src/Scene/Components/: AudioListenerComponent.cpp  AudioSourceComponent.cpp  GravityAttractorComponent.cpp  RenderableNode.cpp  RigidBodyComponent.cpp  SoftBodyComponent.cpp
src/Core/src/Scene/Systems/: AudioSystem.cpp  NetworkSystem.cpp  PhysicsSystem.cpp  RenderSystem.cpp
src/Core/src/UI/: BuildPanel.cpp  ConfigurationsWindow.cpp  DevEditor.cpp  SpriteEditor.cpp
src/Core/src/UI/Widgets/: PathFieldWidget.cpp
src/Entry/: CMakeLists.txt
src/Entry/include/: main.hpp
src/Entry/include/Bootstrapper/: EntryPoint.hpp
src/Entry/src/: EntryPoint.cpp  main.cpp
src/Entry/src/Bootstrapper/: EntryPoint.cpp
src/Entry/temp/: README.md
src/GLSL/: main.frag  main.vert
src/Game/include/Modules/: HelloWorldModule.hpp
src/Generator/: CMakeLists.txt  INSTALLATION.md  README.md  main.cpp
src/Server/: CMakeLists.txt  README.md
src/Server/src/: main.cpp
src/Testers/: CMakeLists.txt
src/Testers/StandAlone/: bullet_2d_softbody.cpp  bullet_softbodies.cpp  cereal_lib_example.cpp  enet_rpc_example.cpp  protobuff_node_test.cpp  serializable-system-draft.cpp
src/Testers/UnitTesting/: PathsManagerTest.cpp  ResourcesTests.cpp  SceneNodeTest.cpp  Serialization.cpp
src/core/: CMakeLists.txt
src/core/include/threading/: ThreadPool.hpp
src/entry/: CMakeLists.txt
src/game/: CMakeLists.txt
src/game/include/modules/: HelloWorldModule.hpp
